Fix font size, weight, and text align

--- a/css/main.css
+++ b/css/main.css
@@ -32,10 +32,14 @@ blockquote {
   width: 20em;
 }
 
+blockquote > p > strong {
+  font-weight: normal;
+}
+
 figure {
   margin: 0;
   padding: 0;
-  text-align: centre;
+  text-align: middle;
   margin-left: auto;
   margin-right: auto;
 }
@@ -54,7 +58,7 @@ footer > cite {
 
 figure + p {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
 }
 
 h2 + p {
